fix tests which now need to be async